examples/test/testpolicy9057.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9057
  namespace: namespace481
spec:
  podSelector:
    matchLabels:
      key14: value8
      key36: value7
      key2: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value14
          key22: value36
          key1: value5
      podSelector:
        matchLabels:
          key30: value10
          key35: value7
          key48: value39
